tests/src/frontend/typechecking/invalid/infer_frozen_fun_1.sk
fun foo<T: frozen>(T): void {
  void
}
fun test(): void {
  foo(mutable Array[0])
}
